--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -9,6 +9,7 @@
 .login_heading{
    font-size: 2.5rem;
    color: rgb(0, 53, 55);
+   margin-bottom: 1.5rem;
 }
 .login_form{
     display: flex;
@@ -17,7 +18,7 @@
   border-radius: 12px;
   padding:35px 30px;
 row-gap: 20px;
-    width: 25%;
+    width: 35%;
 }
 .login_form input{
     padding: 10px;
@@ -46,4 +47,25 @@ span{
     font-size: 1.1rem;
     color:red;
     text-align: center;
+}
+
+@media screen and (min-width:992px) and (max-width:1200px){
+    .login_form{
+     width: 35%;
+    }
+}
+@media screen and (min-width:768px) and (max-width:991px){
+    .login_form{
+        width: 50%;
+       }
+}
+@media screen and (min-width:568px) and (max-width:767px){
+    .login_form{
+        width: 60%;
+       }
+}
+@media screen and  (max-width:567px){
+    .login_form{
+        width: 70%;
+       }
 }
