--- a/src/styles/single.css
+++ b/src/styles/single.css
@@ -61,7 +61,12 @@ line-height: 1.5;
     color: red;
 }
 .side-menu{
-    flex: 2;
-  
+    flex: 2;  
+}
 
+
+@media screen and (max-width:567px){
+    .single_page_div{
+        flex-direction: column;
+    }
 }
